feat(frontend): 添加应用图标和 Maple Mono 字体资源
添加 logo.svg 作为网站图标，并引入 Maple Mono 字体家族的所有变体文件（包括粗体、斜体等）以支持前端自定义字体显示。同时更新 index.html 以正确引用本地图标并加载字体样式。

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JuFireX</title>
-    <link rel="icon" href="/logo.svg" type="image/svg+xml" />
+    <link rel="icon" href="./assets/logo.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/fontsource/fonts/maple-mono@latest/index.css"
+    />
   </head>
 
   <body>
