--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,10 +6,7 @@
     <title>JuFireX</title>
     <link rel="icon" href="./assets/logo.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/fontsource/fonts/maple-mono@latest/index.css"
-    />
+    <link rel="stylesheet" href="./assets/MapleMono-TTF/font.css" />
   </head>
 
   <body>
